@@ -343,6 +343,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 18601) generator=backlinks returns invalid continue parameter
 * (bug 18597) Internal error with empty generator= parameter
 * (bug 18617) Add xml:space="preserve" attribute to relevant tags in XML output
+* (bug 17611) Provide a sensible error message on install when the SQLite data
+  directory is wrong.
 
 === Languages updated in 1.15 ===
 
